Little updates, can't seem to knit to document types

--- a/scripts/Goodingetal2009_Prereg.Rmd
+++ b/scripts/Goodingetal2009_Prereg.Rmd
@@ -4,16 +4,35 @@ shorttitle      : "Gooding et al. peregistration"
 date            : "`r Sys.setlocale('LC_TIME', 'C'); format(Sys.time(), '%d\\\\. %B %Y')`"
 
 author: 
-  - name        : First Author
+  - name        : Author
+    affiliation : 1
+  - name        : Mac Rae Danielle
+    affiliation : "3"
+  
+  - name        : Author
     affiliation : 1
   - name        : Ernst-August Doelle
     affiliation : "1,2"
+
+  - name        : Author
+    affiliation : 1
+  - name        : Ernst-August Doelle
+    affiliation : "1,2"
+
+  - name        : Author
+    affiliation : 1
+  - name        : Ernst-August Doelle
+    affiliation : "1,2"
+
+
 
 affiliation:
   - id          : 1
     institution : Wilhelm-Wundt-University
   - id          : 2
     institution : Konstanz Business School
+  - id          : 3
+    institution : Concordia University
 
 output: prereg::cos_prereg
 ---
@@ -80,18 +99,18 @@ Each of the 48 seastars used in this study will be randomly assigned to tanks.
 # Sampling Plan
 <!-- In this section we’ll ask you to describe how you plan to collect samples, as well as the number of samples you plan to collect and your rationale for this decision. Please keep in mind that the data described in this section should be the actual data used for analysis, so if you are using a subset of a larger dataset, please describe the subset that will actually be used in your study. -->
 
-We plan to sample 48 individuals, this size complies with our lab space constraints of 24 available tanks.
+We plan to sample 48 individuals, this size complies with our lab space constraints of 24 available tanks. Specimens will be collected in January from Jericho Beach, Vancouver. 
 
 ## Existing data
 <!-- Preregistration is designed to make clear the distinction between confirmatory tests, specified prior to seeing the data, and exploratory analyses conducted after observing the data. Therefore, creating a research plan in which existing data will be used presents unique challenges. Please select the description that best describes your situation. Please do not hesitate to contact us if you have questions about how to answer this question (prereg@cos.io). -->
 
-**Registration prior to creation of data**. As of the date of submission of this research plan for preregistration, the data have not yet been collected, created, or realized. 
+<!--**Registration prior to creation of data**. As of the date of submission of this research plan for preregistration, the data have not yet been collected, created, or realized. 
 
 **Registration prior to any human observation of the data**. As of the date of submission, the data exist but have not yet been quantified, constructed, observed, or reported by anyone - including individuals that are not associated with the proposed study. Examples include museum specimens that have not been measured and data that have been collected by non-human collectors and are inaccessible.
 
 **Registration prior to accessing the data**. As of the date of submission, the data exist, but have not been accessed by you or your collaborators. Commonly, this includes data that has been collected by another researcher or institution.
 
-**Registration prior to analysis of the data**. As of the date of submission, the data exist and you have accessed it, though no analysis has been conducted related to the research plan (including calculation of summary statistics). A common situation for this scenario when a large dataset exists that is used for many different studies over time, or when a data set is randomly split into a sample for exploratory analyses, and the other section of data is reserved for later confirmatory data analysis.
+**Registration prior to analysis of the data**. As of the date of submission, the data exist and you have accessed it, though no analysis has been conducted related to the research plan (including calculation of summary statistics). A common situation for this scenario when a large dataset exists that is used for many different studies over time, or when a data set is randomly split into a sample for exploratory analyses, and the other section of data is reserved for later confirmatory data analysis.-->
 
 **Registration following analysis of the data**. As of the date of submission, you have accessed and analyzed some of the data relevant to the research plan. This includes preliminary analysis of variables, calculation of descriptive statistics, and observation of data distributions. Please see cos.io/prereg for more information.
 
@@ -104,7 +123,7 @@ An appropriate instance of using existing data would be collecting a sample size
 
 Example: An appropriate instance of using existing data would be collecting a sample size much larger than is required for the study, using a small portion of it to conduct exploratory analysis, and then registering one particular analysis that showed promising results. After registration, conduct the specified analysis on that part of the dataset that had not been investigated by the researcher up to that point. -->
 
-Enter your response here.
+We have simulated date based on the previous study, including review of summary statistics. This was to ensure that using the same methods this experiment was replicable. 
 
 
 ## Data collection procedures
