--- a/scripts/Goodingetal2009_Prereg.Rmd
+++ b/scripts/Goodingetal2009_Prereg.Rmd
@@ -213,7 +213,7 @@ A simple linear regression will be used for both growth rate under increasing te
 
 Example: The "Effect of sugar on brownie tastiness" does not require any additional transformations. However, if it were using a regression analysis and each level of sweet had been categorically described (e.g. not sweet, somewhat sweet, sweet, and very sweet), 'sweet' could be dummy coded with 'not sweet' as the reference category. -->
 
-Enter your response here.
+Data for feeding rate and relative growth will be log transformed to normalize variance. 
 
 
 ## Inference criteria
@@ -222,6 +222,16 @@ Enter your response here.
 p-values, confidence intervals, and effect sizes are standard means for making an inference, and any level is acceptable, though some criteria must be specified in this or previous fields. Bayesian analyses should specify a Bayes factor or a credible interval. If you are selecting models, then how will you determine the relative quality of each? In regards to multiple comparisons, this is a question with few "wrong" answers. In other words, transparency is more important than any specific method of controlling the false discovery rate or false error rate. One may state an intention to report all tests conducted or one may conduct a specific correction procedure; either strategy is acceptable.
 
 Example: We will use the standard p<.05 criteria for determining if the ANOVA and the post hoc test suggest that the results are significantly different from those expected if the null hypothesis were correct. The post-hoc Tukey-Kramer test adjusts for multiple comparisons. -->
+For our linear regression analyses we will use a p< 0.05 criteria to determine significance of slope, and R^2 values to quantify model fit.
+
+# Simulated Data Analysis
+
+## Methods
+We simulated data using results presented in @Gooding2009 to explore the replicability of the analysis. The replication focus was on the relative growth and the feeding rate temperature response linear regression analyses, and we simulated random data using the slope and intercept values from the regression equations from each of these analyses. 
+Linear regression analyses were performed using the simulated data for relative growth as a function of temperature, and for feeding rate as a function of temperature, and the data were plotted with the resulting regression lines. 
+
+## Results
+
 
 
 ## Data exclusion
@@ -237,7 +247,6 @@ Enter your response here.
 
 Example: If a subject does not complete any of the three indices of tastiness, that subject will not be included in the analysis. -->
 
-Enter your response here.
 
 
 ## Exploratory analyses (optional)
