--- a/scripts/Goodingetal2009_Prereg.Rmd
+++ b/scripts/Goodingetal2009_Prereg.Rmd
@@ -222,7 +222,7 @@ Data for feeding rate and relative growth will be log transformed to normalize v
 p-values, confidence intervals, and effect sizes are standard means for making an inference, and any level is acceptable, though some criteria must be specified in this or previous fields. Bayesian analyses should specify a Bayes factor or a credible interval. If you are selecting models, then how will you determine the relative quality of each? In regards to multiple comparisons, this is a question with few "wrong" answers. In other words, transparency is more important than any specific method of controlling the false discovery rate or false error rate. One may state an intention to report all tests conducted or one may conduct a specific correction procedure; either strategy is acceptable.
 
 Example: We will use the standard p<.05 criteria for determining if the ANOVA and the post hoc test suggest that the results are significantly different from those expected if the null hypothesis were correct. The post-hoc Tukey-Kramer test adjusts for multiple comparisons. -->
-For our linear regression analyses we will use a p< 0.05 criteria to determine significance of slope, and R^2 values to quantify model fit.
+For our linear regression analyses we will use a p< 0.05 criteria to determine significance of slope, and R^2^ values to quantify model fit.
 
 # Simulated Data Analysis
 
