--- a/scripts/Goodingetal2009_Prereg.Rmd
+++ b/scripts/Goodingetal2009_Prereg.Rmd
@@ -255,14 +255,7 @@ Example: If a subject does not complete any of the three indices of tastiness, t
 
 Example: We expect that certain demographic traits may be related to taste preferences. Therefore, we will look for relationships between demographic variables (age, gender, income, and marital status) and the primary outcome measures of taste preferences. -->
 
-Enter your response here.
-
-# Other
-
-## Other (Optional)
-<!-- If there is any additional information that you feel needs to be included in your preregistration, please enter it here. Literature cited, disclosures of any related work such as replications or work that uses the same data, or other context that will be helpful for future readers would be appropriate here. -->
-
-Enter your response here.
+No exploratory analyses will be made in this study. We will follow the hypotheses laid out in this pre-registration. 
 
 
 # References
